@@ -1,4 +1,4 @@
-# $NetBSD: XEN3_DOM0,v 1.16 2008/05/01 20:18:18 cegger Exp $
+# $NetBSD: XEN3_DOM0,v 1.17 2008/05/18 22:05:59 cegger Exp $
 
 include 	"arch/amd64/conf/std.xen"
 
@@ -213,6 +213,7 @@ ioapic*		at mainbus? apid ?
 acpiacad* 	at acpi?		# ACPI AC Adapter
 acpibat* 	at acpi?		# ACPI Battery
 acpibut* 	at acpi?		# ACPI Button
+acpidalb*	at acpi?		# ACPI Direct Application Launch Button
 acpiec* 	at acpi?		# ACPI Embedded Controller
 acpilid* 	at acpi?		# ACPI Lid Switch
 acpitz*		at acpi?		# ACPI Thermal Zone
